# Scoring-Credit

./: Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh  streamlit_app.py  utils.py
.github/workflows/: CI_CD.yaml
app/: logger.py  main.py  predictor.py  schemas.py
data/predictions/: sample_deploy.csv
logs/: log_predictions.csv
notebooks/: EDA.ipynb  decile_table.csv  modelisation.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/109768388772094602/: meta.yaml
notebooks/mlruns/109768388772094602/11978504bbbf4c8ea51b3b918554ea27/: meta.yaml
notebooks/mlruns/109768388772094602/11978504bbbf4c8ea51b3b918554ea27/metrics/: auc_cv_mean  auc_cv_std  auc_oof  importance_AMT_ANNUITY  importance_ANNUITY_INCOME_RATIO  importance_CREDIT_TERM  importance_DAYS_BIRTH  importance_DAYS_CREDIT_max  importance_DAYS_EMPLOYED  importance_DAYS_ID_PUBLISH  importance_DAYS_REGISTRATION  importance_DEBT_CREDIT_RATIO_max  importance_EXT_SOURCE_1  importance_EXT_SOURCE_2  importance_EXT_SOURCE_3  importance_EXT_SOURCE_MEAN  importance_GOODS_CREDIT_RATIO  importance_INST_COUNT  importance_POS_CNT_INSTALMENT_MEAN  importance_POS_MONTHS_COUNT  pr_auc_oof  (+3 more)
notebooks/mlruns/109768388772094602/1792025e3dda48c08316a7a09f2538bb/: meta.yaml
notebooks/mlruns/109768388772094602/23e91acca4f3435e9596d5949b9f8c7d/: meta.yaml
notebooks/mlruns/109768388772094602/2e5db35914e540c6b54f1069494a8930/: meta.yaml
notebooks/mlruns/109768388772094602/600191abec2a4d43abc672e5a838c4fa/: meta.yaml
notebooks/mlruns/758564996022630992/: meta.yaml
tests/: conftest.py  test_api.py
(+119 files in other folders)
