[project]
name = "creditscoring"
version = "0.1.0"
description = "home credit default risk scoring model"
authors = [
    {name = "Fatima-ZahraB",email = "barhoufz@gmail.com"}
]
readme = "README.md"
packages = [
    { include = "creditscoring" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "pydantic (>=2.13.1,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "requests (>=2.33.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "evidently (>=0.7.21,<0.8.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "shap (>=0.51.0,<0.52.0)",
    "optuna-integration (>=4.8.0,<5.0.0)",
    "mlflow (>=2.15.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

